crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__string_min_length_only.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{\"minLength\":3,\"type\":\"string\"}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::String(s) => (s.chars().count() as u64) >= 3,
            _ => false,
        }
