crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__type_object_array.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{\"type\":[\"object\",\"array\"]}"
expression: is_valid_body(schema)
---
matches!(instance, serde_json::Value::Object(_) | serde_json::Value::Array(_))
