crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__typed_fallback_mixed_types.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{\"minLength\":2,\"type\":[\"string\",\"integer\"]}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::String(s) => (s.chars().count() as u64) >= 2,
            serde_json::Value::Number(
                n,
            ) if jsonschema::__private::types::is_integer(n) => true,
            _ => false,
        }
